Fixed CSS bug on small phones

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1464,7 +1464,7 @@ button a{
     }
 
     .leaderboard-hero h1{
-        font-size: 55px;
+        font-size: 48px;
     }
 
     .leaderboard-hero {
